--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,8 @@
 }
 
 .feature-card:hover {
-  background: var(--black-gradient);
+  /* background: var(--black-gradient); */
+  background: linear-gradient(268.47deg, #45433e 0%, #1d1610 100%);
   box-shadow: var(--card-shadow);
 }
 
@@ -87,12 +88,19 @@
 }
 
 .feedback-card:hover {
-  background: var(--black-gradient);
+  /* background: var(--black-gradient); */
+  background: linear-gradient(268.47deg, #45433e 0%, #1d1610 100%);
 }
 
 .blue__gradient {
   background: linear-gradient(180deg, rgba(188, 165, 255, 0) 0%, #214d76 100%);
   filter: blur(123px);
+}
+
+.orange__gradient {
+  background: linear-gradient(241.88deg, #dc8914 17.79%, #f2c014 57.73%);
+  transform: translateZ(0);
+  filter: blur(253px);
 }
 
 .pink__gradient {
