--- a/src/index.css
+++ b/src/index.css
@@ -93,22 +93,23 @@
 }
 
 .blue__gradient {
-  background: linear-gradient(180deg, rgba(188, 165, 255, 0) 0%, #214d76 100%);
-  filter: blur(123px);
+  /* background: linear-gradient(180deg, rgba(188, 165, 255, 0) 0%, #214d76 100%); */
+  background: linear-gradient(241.88deg, #dc8914 17.79%, #f2c014 57.73%);
+  filter: blur(300px);
 }
 
 .orange__gradient {
   background: linear-gradient(241.88deg, #dc8914 17.79%, #f2c014 57.73%);
   transform: translateZ(0);
-  filter: blur(253px);
+  filter: blur(380px);
 }
 
 .pink__gradient {
-  background: linear-gradient(90deg, #f4c4f3 0%, #fc67fa 100%);
-  filter: blur(900px);
+  /* background: linear-gradient(90deg, #f4c4f3 0%, #fc67fa 100%);
+  filter: blur(900px); */
 }
 
 .white__gradient {
-  background: rgba(255, 255, 255, 0.6);
-  filter: blur(750px);
+  /* background: rgba(255, 255, 255, 0.6);
+  filter: blur(750px); */
 }
